Added new html files

--- a/template/index.html
+++ b/template/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main Page</title>
+    <title>Event Management System</title>
+    <link rel= "stylesheet" type= "text/css" href= "/static/styles/main.css">
 </head>
 <body>
-    <nav>
+<nav>
+    <ul>
+        <li><a href = '#event'>Event</a></li>
+        <li><a href = '#planner'>Planner</a></li>
+        <li><a href = '#venue'>Venue</a></li>
+        <li><a href = '#venue'>Logout</a></li>
+    </ul>
+</nav>
 
-    </nav>
 </body>
 </html>
