--- a/template/login.html
+++ b/template/login.html
@@ -4,40 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/login.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "/static/styles/login.css">
     <title>Sign Up </title>
 </head>
 <body>
-    <div class="container" id="container">
-        <div class="form-container sign-up-container">
-            <form action="#">
-                <h1>Create Account</h1>
-                <input type="text" placeholder="Username" />
-                <input type="password" placeholder="Password" />
-                            <input type="tel" placeholder="Phone Number" /> <input type="text" placeholder="Address" />
-                <button>Sign Up</button>
-            </form>
+    <div class="login-page">
+        <div class="form">
+          <form class="login-form" action="/login" method="POST">
+            <input type="text" placeholder="username" name="username"/>
+            <input type="password" placeholder="password" name="password"/>
+            <button>LOGIN</button>
+            <p class="message">Not registered? <a href="/">Create an account</a></p>
+          </form>
         </div>
-        <div class="form-container sign-in-container">
-            <form action="#">
-                <h1>Sign in</h1>
-                <input type="text" placeholder="Username" />
-                <input type="password" placeholder="Password" />
-                <a href="#">Forgot your password?</a>
-                <button>Sign In</button>
-            </form>
-        </div>
-        <div class="overlay-container">
-            <div class="overlay">
-                <div class="overlay-panel overlay-left">
-                    <button class="ghost" id="signIn">Sign In</button>
-                </div>
-                <div class="overlay-panel overlay-right">
-                    <button class="ghost" id="signUp">Sign Up</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="static/logic/login.js"></script>
-
+      </div>
 </body>
+</html>
