--- a/template/index.html
+++ b/template/index.html
@@ -9,11 +9,40 @@
 <nav>
     <ul>
         <li><a href = '#event'>Event</a></li>
-        <li><a href = '#planner'>Planner</a></li>
+        <li><a href = 'planner.html'>Planner</a></li>
         <li><a href = '#venue'>Venue</a></li>
         <li><a href = '#venue'>Logout</a></li>
     </ul>
 </nav>
+    <h1 style = text-align:center>Event Registration</h1>
+<form>
+  <label for="event-name">Event Name:</label>
+  <input type="text" id="event-name" name="event-name"><br>
 
+  <label for="event-type">Event Type:</label>
+  <select id="event-type" name="event-type">
+    <option value="wedding">Wedding</option>
+    <option value="conference">Conference</option>
+    <option value="concert">Concert</option>
+    <option value="party">Party</option>
+  </select><br>
+
+  <label for="event-date">Event Date:</label>
+  <input type="date" id="event-date" name="event-date"><br>
+
+  <label for="event-time">Event Time:</label>
+  <input type="time" id="event-time" name="event-time"><br>
+
+  <label for="venue">Venue:</label>
+  <input type="text" id="venue" name="venue"><br>
+
+  <label for="planner">Planner:</label>
+  <input type="text" id="planner" name="planner"><br>
+
+  <label for="total-cost">Total Cost:</label>
+  <input type="number" id="total-cost" name="total-cost" min="0"><br>
+
+  <input type="submit" value="Submit">
+</form>
 </body>
 </html>
