--- a/static/styles/register.css
+++ b/static/styles/register.css
@@ -1,42 +1,80 @@
-form {
-  width: 50%;
-  margin: 0 auto;
-  padding: 30px;
-  background-color: #f9f9f9;
-  border: 1px solid #e5e5e5;
-  border-radius: 5px;
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto:300');
 
-label {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  display: block;
-}
+.login-page {
+    width: 360px;
+    padding: 8% 0 0;
+    margin: auto;
+  }
 
-input[type="text"],
-input[type="date"],
-input[type="time"],
-input[type="number"],
-select {
-  width: 100%;
-  padding: 12px;
-  margin-bottom: 20px;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-}
-
-input[type="submit"] {
-  width: 100%;
-  padding: 12px 20px;
-  margin-top: 20px;
-  border-radius: 5px;
-  background-color: #4CAF50;
-  color: white;
-  cursor: pointer;
-}
-input[type="submit"]:hover {
-  background-color: #45a049;
-}
+.form {
+    background-color: #150d0d61;
+    width: 80%;
+    padding: 75px;
+    border: 1px solid #fff;
+    border-radius: 87px
+  }
+  .form input {
+    font-family: "Roboto", sans-serif;
+    outline: 0;
+    background: #f2f2f2;
+    width: 102%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 20px;
+    box-sizing: border-box;
+    font-size: 14px;
+    border-radius: 12px;
+  }
+  .form button {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    background: #b1b6fa53;
+    width: 105%;
+    padding: 15px;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 40px;
+  }
+  .form .message {
+    margin: 15px 0 0;
+    color: #ffffff;
+    font-size: 12px;
+  }
+  .form .message a {
+    color: #c9de6c;
+    text-decoration: solid;
+  }
+  
+  .container {
+    position: relative;
+    z-index: 1;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+  .container .info {
+    margin: 50px auto;
+    text-align: center;
+  }
+  .container .info h1 {
+    margin: 0 0 15px;
+    padding: 0;
+    font-size: 36px;
+    font-weight: 300;
+    color: #1a1a1a;
+  }
+  .container .info span {
+    color: #4d4d4d;
+    font-size: 12px;
+  }
+  .container .info span a {
+    color: #000000;
+    text-decoration: none;
+  }
+  .container .info span .fa {
+    color: #EF3B3A;
+  }
+  body {
+    background-image:url("/static/login.jpg");
+    font-family: "Roboto", sans-serif;
+    background-size: cover;
+  }
