--- a/template/index.html
+++ b/template/index.html
@@ -4,45 +4,32 @@
     <meta charset="UTF-8">
     <title>Event Management System</title>
     <link rel= "stylesheet" type= "text/css" href= "/static/styles/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
 <nav>
+    {% with messages=get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    {% for category, message in messages %}
+    <script>
+        alert("{{ get_flashed_messages()[0] }}");
+    </script>
+      {% endfor %}
+      {% endif %}
+      {% endwith %}
     <ul>
-        <li><a href = '#event'>Event</a></li>
-        <li><a href = 'planner.html'>Planner</a></li>
-        <li><a href = '#venue'>Venue</a></li>
-        <li><a href = '#venue'>Logout</a></li>
+    {% if current_user.is_authenticated %}
+        <li><a href =  '/create_event'>EVENT</a></li>
+        <li><a href = '/planner'>PLANNER</a></li>
+        <li><a href = '/venue'>VENUE</a></li>
+        <li><a href = '/plansview'>PLANS</a></li>
+        <li><a href = '/logout'>Logout</a></li>
+    {% else %}
+      <li><a href = '/eventview'>EVENT</a></li>
+      <li><a href = '/login'>LOGIN</a></li>
+    {% endif %}
     </ul>
 </nav>
-    <h1 style = text-align:center>Event Registration</h1>
-<form>
-  <label for="event-name">Event Name:</label>
-  <input type="text" id="event-name" name="event-name"><br>
-
-  <label for="event-type">Event Type:</label>
-  <select id="event-type" name="event-type">
-    <option value="wedding">Wedding</option>
-    <option value="conference">Conference</option>
-    <option value="concert">Concert</option>
-    <option value="party">Party</option>
-  </select><br>
-
-  <label for="event-date">Event Date:</label>
-  <input type="date" id="event-date" name="event-date"><br>
-
-  <label for="event-time">Event Time:</label>
-  <input type="time" id="event-time" name="event-time"><br>
-
-  <label for="venue">Venue:</label>
-  <input type="text" id="venue" name="venue"><br>
-
-  <label for="planner">Planner:</label>
-  <input type="text" id="planner" name="planner"><br>
-
-  <label for="total-cost">Total Cost:</label>
-  <input type="number" id="total-cost" name="total-cost" min="0"><br>
-
-  <input type="submit" value="Submit">
-</form>
+    <h1 style="text-align: center; color:#ffffffa3;font-weight:Bold;font-size:300px;margin:200px;">WELCOME</h1>
 </body>
 </html>
