--- a/template/login.html
+++ b/template/login.html
@@ -5,16 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel= "stylesheet" type= "text/css" href= "/static/styles/login.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Sign Up </title>
 </head>
 <body>
     <div class="login-page">
         <div class="form">
+          {% with messages=get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+          {% for category, message in messages %}
+          <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
+              {{message}}
+          </div>
+            {% endfor %}
+            {% endif %}
+            {% endwith %}
           <form class="login-form" action="/login" method="POST">
             <input type="text" placeholder="username" name="username"/>
             <input type="password" placeholder="password" name="password"/>
             <button>LOGIN</button>
-            <p class="message">Not registered? <a href="/">Create an account</a></p>
+            <p class="message">Not registered? <a href="/signup">Create an account</a></p>
           </form>
         </div>
       </div>
